# walk-forward-auto-optimizer

./: .gitignore  .shaw_advanced_research_batch_fourteen  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: operating-boundaries.md  recruiter-brief.md  research-note.md  system-design.md  validation-evidence.md
src/walk_forward_auto_optimizer/: __init__.py  optimizer.py
tests/: test_milestone_docs_contract.py  test_optimizer.py
