[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "walk-forward-auto-optimizer"
version = "0.1.0"
description = "Walk-forward window construction and parameter selection utilities."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ephraim Shaw" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
